[metadata]
name = structural_analysis
version = attr: structural_analysis.__version__
url = https://github.com/Pato546/structural_analysis
description = Blazingly fast Structural Analysis Software
author = 'Boateng Patrick'
author_email = 'boatengpato.pb@gmail.com'
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/Pato546/structural_analysis
    Issue Tracker = https://github.com/Pato546/structural_analysis/issues
#   Documentation = https://pyscaffold.org/

#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Windows

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Win32 (MS Windows)
    Intended Audience :: End Users/Desktop
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education
    Topic :: Scientific/Engineering

[options]
package_dir =
    =src
packages = find:
python_requires = >= 3.9

# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata
    python_version>"3.8"
    sympy >= 1.10.1
    setuptools >= 60.8.1
    attrs >= 21.4.0


[options.packages.find]
where = src
exclude =
    tests
    docs*

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install structural_analysis[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Not sure if console scripts will be added

